rose pine tmux, updte fcsw.yaml for tmuxp

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,8 @@
-# use ctrl-a as  prefix
+# ============================
+# Basic settings
+# ============================
+
+# use ctrl-a as prefix
 unbind C-b
 set-option -g prefix C-a
 
@@ -12,15 +16,18 @@ set -s set-clipboard external
 set -g history-limit 100000
 set-option -g allow-rename off
 
-# Allow config relaoding with <C-b> r
+# Allow config reloading with <prefix> r
 bind r source-file ~/.tmux.conf
 
-set-option -g default-terminal "xterm-256color"
-set-option -g terminal-overrides ",xterm-256color:RGB"
+# Truecolor + terminal type
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm-256color:RGB"
+set -as terminal-features "xterm-256color:RGB"
 
-# set vi-mode
+# vi-style copy mode
 set-window-option -g mode-keys vi
 
+# Pane navigation
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
@@ -29,33 +36,58 @@ bind-key l select-pane -R
 set -g pane-base-index 1
 set -g base-index 1
 
-set-option -g status-position top   
+set-option -g status-position top
 
-# truecolor
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ",xterm-256color:RGB"
-set -as terminal-features "xterm-256color:RGB"
-
+# ============================
 # Plugins
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmuxplugins'   
+# ============================
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmuxplugins'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'rose-pine/tmux'
-# set -g @plugin 'kechol/tmux-git-status'
+set -g @plugin 'kechol/tmux-git-status'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-# Rose Pine options
-set -g @rose_pine_variant 'moon'
-set -g @rose_pine_host 'on'
-set -g @rose_pine_hostname_short 'on'
-set -g @rose_pine_user 'on' 
-set -g @rose_pine_directory 'on'
-set -g @rose_pine_only_windows 'off'     # <-- important
+# ============================
+# Rose Pine Moon status bar
+# ============================
 
+# Overall bar appearance
+set -g status-style "bg=#101010,fg=#e0def4"
+set -g message-style "bg=#101010,fg=#e0def4"
+set -g message-command-style "bg=#101010,fg=#e0def4"
+set -g status-interval 1
+set -g status-right-length 100
 set -g status-b '#101010'
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+set -g window-status-format "#[bg=#101010,fg=#908caa]#I:#W "
+set -g window-status-current-format "#[bg=#101010,fg=#f6c177,bold]#I:#W "
+set -g status-left "#[bg=#101010,fg=#f6c177,bold] #S #[fg=#908caa] "
+set -g status-right '#{prefix_highlight} #[bg=#101010,fg=#9ccfd8]#(basename "$(git -C #{pane_current_path} rev-parse --show-toplevel 2>/dev/null)") #[fg=#f6c177] #{git_branch} #[fg=#eb6f92]#{git_status} #[fg=#e0def4]| %Y-%m-%d %H:%M '
+
+# Left side: session name
+#jset -g status-left-length 40
+#set -g status-left '#[fg=#f6c177,bold] #S #[fg=#908caa] '
+
+# Inactive windows
+set -g window-status-format ' #[fg=#908caa]#I #[fg=#6e6a86]#W '
+
+# Active window
+set -g window-status-current-format ' #[bg=#393552,fg=#e0def4,bold]#I #[fg=#f6c177]#W #[bg=default] '
+
+# Separator style (window list)
+set -g window-status-separator ''
+
+# Right side: prefix, git root name, branch, status, time
+set -g status-right '#{prefix_highlight} #[fg=#9ccfd8]#(basename "$(git -C #{pane_current_path} rev-parse --show-toplevel 2>/dev/null)") #[fg=#f6c177] #{git_branch} #[fg=#eb6f92]#{git_status} #[fg=#e0def4]| %Y-%m-%d %H:%M '
+
+# If you ever want a brighter variant:
+# set -g status-style "bg=#2a273f,fg=#dcd7ff"
+# set -g window-status-format "#[fg=#a6a1c1]#I:#W "
+
+# ============================
+# Smart pane switching with Vim
+# ============================
 
 # decide whether we're in a Vim process
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -66,15 +98,11 @@ bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
 
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
+# Assuming tmux ≥ 3.0; use the modern binding form
+bind-key -n 'C-\' if-shell "$is_vim" 'send-keys C-\\' 'select-pane -l'
 bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
 
+# Copy-mode navigation
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
@@ -82,17 +110,12 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
-set -g status-interval 1
-set -g status-right-length 100
-set -g status-right "asdfasdfasdf" #"#{git_branch} #{git_upstream} #{git_status} | %a %h-%d %H:%M"
-set -g status-right '#{prefix_highlight} #[fg=#c4a7e7] #{git_branch} #[fg=#eb6f92]#{git_status} | %Y-%m-%d %H:%M '
+# ============================
+# TPM init (keep last)
+# ============================
 
-# Initialize TPM
-# always keep this line at the bottom of the config file
-# run -b '~/.tmux/plugins/tpm/tpm'
 run -b '~/.config/tmuxplugins/tpm/tpm'
 
 # *****************************************************
 # *** Important: press <prefix>I to install plugins ***
 # *****************************************************
-
