--- a/tmuxp/fcsw.yaml
+++ b/tmuxp/fcsw.yaml
@@ -1,17 +1,23 @@
 session_name: fcsw
+
+shell_command_before:
+    - source "$HOME/.local/bin/pyenv/bin/activate"
+
 windows:
-- window_name: dev window
-  layout: tiled
-  panes:
-    - shell_command:           # pane no. 1
-        - cd $HOME/dev/iq-firmware/products/fc          # run multiple commands in this pane
-    - shell_command:           # pane no. 1
-        - cd $HOME/dev/iq-firmware/products/fc          # run multiple commands in this pane
-        - source "$HOME/.local/bin/pyenv/bin/activate"
-        - python $HOME/dev/iq-firmware/tools/term.py
-    - shell_command:           # pane no. 1
-        - cd $HOME/dev/iq-firmware/products/sw          # run multiple commands in this pane
-    - shell_command:           # pane no. 1
-        - cd $HOME/dev/iq-firmware/products/sw          # run multiple commands in this pane
-        - source "$HOME/.local/bin/pyenv/bin/activate"
-        - python $HOME/dev/iq-firmware/tools/term.py
+    - window_name: fixctrl
+      layout: tiled
+      panes:
+          - shell_command:
+              - cd "$HOME/dev/iq-firmware/products/fc"
+          - shell_command:
+              - cd "$HOME/dev/iq-firmware/products/sw"
+
+    - window_name: switch
+      layout: tiled
+      panes:
+          - shell_command:
+              - cd "$HOME/dev/iq-firmware/products/fc"
+              - python "$HOME/dev/iq-firmware/tools/kit/term.py"
+          - shell_command:
+              - cd "$HOME/dev/iq-firmware/products/sw"
+              - python "$HOME/dev/iq-firmware/tools/kit/term.py"
