--- a/tmuxp/fcsw.yaml
+++ b/tmuxp/fcsw.yaml
@@ -4,7 +4,7 @@ shell_command_before:
     - source "$HOME/.local/bin/pyenv/bin/activate"
 
 windows:
-    - window_name: fixctrl
+    - window_name: build
       layout: tiled
       panes:
           - shell_command:
@@ -12,7 +12,7 @@ windows:
           - shell_command:
               - cd "$HOME/dev/iq-firmware/products/sw"
 
-    - window_name: switch
+    - window_name: term
       layout: tiled
       panes:
           - shell_command:
