partial fix of tmux status bar, fix nfw tmuxp script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,7 +42,6 @@ set-option -g status-position top
 # Plugins
 # ============================
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmuxplugins'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'kechol/tmux-git-status'
@@ -114,7 +113,7 @@ bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 # TPM init (keep last)
 # ============================
 
-run -b '~/.config/tmuxplugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
 
 # *****************************************************
 # *** Important: press <prefix>I to install plugins ***
